.env aerojob backend

--- a/.env
+++ b/.env
@@ -7,12 +7,13 @@ EMAIL_FROM="AeroJob <aerojobsystems@gmail.com>"
 TEST_EMAIL=aerojobsystems@gmail.com
 
 # ============================== APP ==============================
-NODE_ENV=development
+NODE_ENV=production
 PORT=5000
-FRONTEND_URL=http://localhost:5173
-CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+FRONTEND_URL=https://aerojob.space
+CORS_ORIGINS=https://aerojob.space,https://www.aerojob.space,http://localhost:5173
 
 # ============================= AUTH =============================
+# 🔐 Make this a long, unique secret (can use https://randomkeygen.com/)
 JWT_SECRET=change_this_to_a_long_random_secret_string
 JWT_EXPIRE=7d
 SKIP_EMAIL_VERIFICATION=true
@@ -21,11 +22,8 @@ SKIP_EMAIL_VERIFICATION=true
 MONGODB_URI=mongodb+srv://aerojobAdmin:aerojobPassword@aerojobcluster.3fde4tg.mongodb.net/aerojob
 
 # ============================ FRONTEND ===========================
-REACT_APP_API_URL=http://localhost:5000
+# (used only if you reference it manually)
+REACT_APP_API_URL=https://aerojob-backend-production.up.railway.app
 
 # ======================= DEV OPTIONS (optional) ==================
 DEV_ECHO_OTP=false
-
-# -------- ALT: SENDGRID (leave commented unless you switch) --------
-# SENDGRID_API_KEY=SG_xxxxxxxxxxxxxxxxxxxxxxxxx
-# EMAIL_FROM="AeroJob <your_verified_single_sender@gmail.com>"
